2008-02-26  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c (g_poll): Further patch by Vlad Grecescu: Drop the
	code path that called WaitMessage(), as WaitMessage() doesn't
	offer any chance for APCs to run. Instead just use the code path
	with MsgWaitForMultipleObjectsEx() even for the
	wait-only-for--messages case. (#517484)

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.15.6 ===

	* NEWS: Updates

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtestfuncs.c: Add Since: markers to docs.  (#518556, 
	Jerry Yu)

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* glib/glib.symbols:
        * glib/gurifuncs.[ch]:
        Rename g_uri_get_scheme to g_uri_parse_scheme.
	Keep g_uri_get_scheme() symbol for this
	unstable release to avoid breaking to many apps.

2008-02-24  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c (_glib_get_installation_directory): New internal function.

	* glib/gspawn-win32.c: When spawning the helper process, use an
	explicit full path. (#518292)

	* glib/gspawn-win32.c
	* glib/gspawn-win32-helper.c: Fix race condition when using the
	helper process. This seems to fix #510664.

	When the helper process writes the handle of the actual started
	user process to the parent process, it must be duplicated in the
	parent process with DuplicateHandle() so that it is a valid handle
	in that process. However, if the helper process has happened to
	exit before the DuplicateHandle() call, the duplication will
	fail. Thus we must synchronise the helper process's exit. Use
	another pipe for this.

	Take care not to inherit the writing end of this pipe to the
	helper process. Also, in the helper process, take care not to
	inherit either of the pipes used for communication with the parent
	process to the started user process.

2008-02-24  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c (g_poll) [Win32]: Use alertable wait functions so